# soar-seek

./: .gitignore  ENV.md  FSM.md  INTEGRATION.md  METRICS.md  README.md  RESULTS.md  VALIDATION.md  campaign_matrix.json  generate_plots.py  hardware.txt  launch_fg_vtol.sh  launch_gz_x500.sh  requirements.txt  run_campaigns.py  run_experiment.py  swarm_launcher.sh  test_load.py  validate_fdm.py
configs/: config_ablation_event_only.yaml  config_ablation_soaring_only.yaml  config_baseline_coverage.yaml  config_full.yaml  events_high.yaml  events_low.yaml  events_nominal.yaml  scenario_nominal.yaml  seeds.yaml  thermal_high.yaml  thermal_low.yaml  thermal_nominal.yaml
patches/: README.md  px4_autopilot_soarer.patch
results/: ANALYSIS_STATUS.txt  CAMPAIGN_STATUS.txt
ros2_ws/src/soarer_env/: package.xml  setup.cfg  setup.py
ros2_ws/src/soarer_env/config/: config.yaml
ros2_ws/src/soarer_env/resource/: soarer_env
ros2_ws/src/soarer_env/soarer_env/: __init__.py  battery_estimator_node.py  fov_detection_node.py  fsm_node.py  ground_event_node.py  metrics_collector_node.py  thermal_field_node.py
ros2_ws/src/soarer_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/soarer_msgs/msg/: BatteryEstimate.msg  FovDetection.msg  FovDetectionArray.msg  FsmState.msg  GroundEvent.msg  GroundEventArray.msg  TelemetryExchange.msg  ThermalCue.msg  ThermalField.msg  ThermalState.msg  VerticalWind.msg
scripts/: aggregate_results.py  analyze_landing.py  analyze_px4jsbsim.py  archive_old_results.py  campaign_lib.py  final_validation_gates.py  generate_enhanced_figures.py  plot_results.py  (+22 more)
(+61 files in other folders)
