<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soarer_env</name>
  <version>0.0.1</version>
  <description>Environmental and sensing nodes for the soarer swarm simulation</description>
  <maintainer email="px4_sitl@todo.todo">px4_sitl</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>soarer_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
